# wecom-aibot-rust-sdk

./: .env.example  .gitignore  Cargo.toml  README.md  robot.html
examples/: basic.rs  echo_test.rs  send_test_message.rs  sender_info.rs  test_files.rs  upload_media.rs
robot_files/: 0(1)  TCaptcha.js.下载  app.7c968864445aef2c4e55.js.下载  darkmode$9ab9c3e7.js.下载  tdesign.min$bde5ddf0.css  vendors~app.82bb3851df10d09f79ad.js.下载  vue.min$e999bb67.js.下载
src/: api.rs  client.rs  crypto_utils.rs  lib.rs  logger.rs  message_handler.rs  types.rs  utils.rs  ws.rs
