[package]
name = "wecom-aibot-rust-sdk"
version = "1.0.0"
edition = "2021"
authors = ["WeCom <wecom@tencent.com>"]
description = "企业微信智能机器人 Rust SDK —— 基于 WebSocket 长连接通道，提供消息收发、流式回复、模板卡片、事件回调、文件下载解密等核心能力"
license = "MIT"
readme = "README.md"
repository = "https://github.com/WecomTeam/wecom-aibot-rust-sdk"
keywords = ["wecom", "wechat-work", "aibot", "websocket", "sdk"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# WebSocket 客户端
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-stream = "0.1"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密解密
aes = "0.8"
cbc = "0.1"
base64 = "0.21"
cpufeatures = "0.2"

# 工具
thiserror = "1.0"
futures = "0.3"
parking_lot = "0.12"
rand = "0.9"
hex = "0.4"
chrono = "0.4"
regex = "1.10"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
dotenv = "0.15"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "send_test_message"
path = "examples/send_test_message.rs"
